<resources>
    <string name="bukhara">
        Service options: Dine-in · Takeaway
Address: Kokill Kalon Str 5, Bukhara, Uzbekistan
Hours:
Thursday	11AM–11PM
Friday	11AM–11PM
Saturday	11AM–11PM
Sunday	11AM–11PM
Monday	11AM–11PM
Tuesday	11AM–11PM
Wednesday	11AM–11PM
Phone: +998 91 445 27 55
    </string>
    <string name="ugur">
        Service options: Dine-in · Takeaway · No delivery
Address: QFH4+399, Bukhara, Uzbekistan
Hours:
Thursday	10AM–11PM
Friday	10AM–11PM
Saturday	10AM–11PM
Sunday	10AM–11PM
Monday	10AM–11PM
Tuesday	10AM–11PM
Wednesday	10AM–11PM


    </string>
    <string name="chashma">
        Service options: Takeaway
Address: QC8H+F99, Bukhara, Uzbekistan
Hours:
Thursday	Open 24 hours
Friday	Open 24 hours
Saturday	Open 24 hours
Sunday	Open 24 hours
Monday	Open 24 hours
Tuesday	Open 24 hours
Wednesday	Open 24 hours
    </string>
    <string name="chinar">
        Service options: Dine-in · Takeaway
Address: Mekhtar Anbar St, Bukhara, Uzbekistan
Hours:
Thursday	11AM–11PM
Friday	11AM–11PM
Saturday	11AM–11PM
Sunday	11AM–11PM
Monday	11AM–11PM
Tuesday	11AM–11PM
Wednesday	11AM–11PM
        Phone: +998 90 299 95 64

    </string>
    <string name="bella">
        Service options: Dine-in · Takeaway · Delivery
Address: Bukhara, Uzbekistan
Hours:
Thursday	11AM–11PM
Friday	11AM–11PM
Saturday	11AM–11PM
Sunday	12–11PM
Monday	11AM–11PM
Tuesday	11AM–11PM
Wednesday	11AM–11PM

    </string>
    <string name="baysun">The name of the Boysun (Baysun) Bahori Festival comes from a small city in southern Uzbekistan. Boysun looks like an average village nestled in the Baisuntau Mountains, but the main difference is that those who live in Boysun have preserved their way of life and traditions and live the same way that they have lived for thousands of years, since the pre-Islamic days.

The boysun Bahori Festival is a celebration of this unique culture. In the era of globalization, these traditions are being lost, and can only be found in small villages far from large cities. The goal of this festival is to gather and preserve these traditions, not only in Boysun, not only in Uzbekistan, but around the world.

In 2001, UNESCO named the culture of Boysun a Masterpiece of Oral and Intangible Cultural Heritage, and in 2002, the first Boysun Bahori Festival was held. Originally, the festival was held every year, but then it fell off. In 2017, the tradition was renewed.</string>
    <string name="Navroz">
         (Uzbek: Navroz / Наврyз) is celebrated widely in Uzbekistan. It is the day of the vernal equinox, and marks the beginning of spring in the Northern Hemisphere. It has been celebrated on the territory corresponding to modern-day Uzbekistan for at least two thousand years.
        People perform traditional dances, perform ritual songs, exchange gifts and organize folk festivals. The main food of Navruz is Sumalak and people do not celebrate Navruz without it. Sumalak which is the symbol of Navruz is made from germinated wheat and people cook this traditional food whole night.
    </string>
    <string name="may9">On May 9, Uzbekistan observes the Day of Memory and Honor, a holiday of grief, reverent deference and pride, and deep thankfulness. Uzbekistan did a lot to ensure that fascism was defeated. The republic hosted refugees; the evacuated factories provided the front
    </string>
    <string name="march8">The International Women/s Day is a holiday of beauty, tenderness and femininity. Also it is known as “Mothers day”. People celebrate this holiday, as a holiday of love, kindness and beauty. Men give this day to the mothers, wives and daughters flowers and gifts with sincere wishes.

March 8th is an official public holiday inn Uzbekistan. This beautiful spring holiday is most often celebrated in the family circle with a festive meal. Another popular choice to celebrate March 8th is by visiting friends and relatives. Men and women give flowers, postcards with poetry, chocolate, and other pleasant gifts to their mothers, wives, grandmothers, sisters and daughters.

Some Uzbek men like to undertake all household duties on this day - starting with washing dishes and ending with cooking dinner and looking after children, so that women can enjoy a full day of rest.

Since the International Women`s Day is a non-working day in Uzbekistan, office workers celebrate it just the day before the holiday. In companies and organizations, all women receive flowers and small memorable gifts from their male co-workers and, sometimes, from employers themselves. During the lunch break, it is common to have a small office party with cake and a glass of wine.

Popular Uzbek entertainers organize concerts and performances to create the festive mood on March 8th. The best singers and most talented actors perform on stage with songs and poems about love and beautiful women. However, very few Uzbeks celebrate the holiday by going to concerts, theaters or movies. The traditional way to celebrate is at home among friends and family.

It’s not required to buy an expensive gift to show that you care about a person. Many women will be pleased to receive a postcard with a poem and a few words of congratulations. Even if you are away from your wife, mother, grandmother or sister, you can always send her a postcard or write an email.</string>
    <string name="chimgan">
        The Chimgan village was settled 400–500 years ago in the mountain massive of dominant the Greater Chimgan peak (3,309 m), at an altitude of 1,620 m.

Some experts see Chinese words in the name "Chimgan" but others translate it as "sod" or "pasture abundant in water, green valley".

For generations of those, who live in Tashkent province, the Greater Chimgan is the place of romantic gravitation.

Greater Chimgan (3,309m) has been known to mountaineers since the beginning of the 20th century.

For those who want to experience of rock climbing, hiking and mountaineering Chimgan Highlands caters many opportunities. Chimgan Highlands have been a host for many other outdoor activities such as hang gliding, skiing, snowboarding and horseback riding.[2]

For many years the Greater Chimgan was the first challenge for thousands beginners of Soviet mountaineering</string>
    <string name="sultan">Khazret Sultan (in Uzbek Hazrati Sulton choʻqqisi) is a mountain and the highest point of Uzbekistan,[3] with an elevation of 4,643 metres (15,233 ft). It is located on the border of Uzbekistan and Tajikistan, in Surxondaryo Region, in the Uzbek part of the Gissar Range. This mountain was formerly known as Peak of the 22nd Congress of the Communist Party.
        </string>
    <string name="adelung">Mount Adelung (Russian: Гора Аделунга) is the highest peak in Pskem Range (Russian: Пскемский хребет) in the extreme north-east of the Tashkent Region, Uzbekistan.[1] Mount Adelung is the highest point of Tashkent Province at 4,301 meters, just 2 meters higher than the nearby Mount Beshtor, located a little further to the south-west in the same range, and it is often erroneously identified in various web sources as the "highest point in Uzbekistan". In fact, this honor goes to the Khazret Sultan, a peak with an altitude of 4,643 m in Surxondaryo Region, in the Uzbek part of the Gissar Range, on the border with Tajikistan, which was formerly known as Peak of the 22nd Congress of the Communist Party.[2][3]

Some web sources use the name Adelunga Toghi, where Adelunga corresponds to the Russian possessive form of Adelung and Toghi presumably stands for mountain in the Uzbek language. It is not known at this stage of writing which Adelung the mountain is named after.
    </string>
    <string name="urgan_too">
        As a result of the Soviet demarcation in Central Asia, which hardly corresponds to ethical and cultural borders, there are border disputes in many places in the region. These keep causing tension between Uzbekistan and Kyrgyzstan, most recently in 2016 when a conflict sparked, among other things, over the question of who the Ungar-Too belonged to.

On 22 August 2016, seven Uzbek security forces landed on the mountain in a helicopter after tensions had developed between the two neighbors due to another territorial issue at the Ortotokoi Dam. During the Uzbek operation, four Kyrgyz workers who were working at the relay station were provisionally arrested. They were charged with staying illegally on Uzbek territory. The Kyrgyz authorities demanded the immediate release of the prisoners and the evacuation of the mountain. Uzbekistan, on the other hand, insisted that the mountain belonged to Uzbek territory, which is also evident from a 2006 agreement made during the tenure of former Kyrgyz President Kurmanbek Bakiyev. The then Kyrgyz President Almazbek Atambayev pointed out that the agreements were concluded under non-transparent conditions and without the approval of parliament.[1][2][3]

The Uzbek presence on the mountain remained for the time being and was increased to 20 people at the beginning of September 2016. The occupation of the Ungar-Too was also used as leverage in other acute issues, but bilateral negotiations initially remained unsuccessful. The four Kyrgyz workers were held in a police station in Yangikurgan.[4] The diplomatic efforts eventually led to the release of the prisoners and the evacuation of the mountain on 18 September.[5]

In the months to come, the two countries came closer together and a Kyrgyz diplomatic delegation visited Uzbekistan for the first time in several years. In July 2018, an agreement was concluded between the states that clarified some border issues, but the Ungar-Too was not mentioned in it, so that status remains unclear
    </string>
    <string name="registan">The Registan was the heart of the ancient city of Samarkand of the Timurid Empire, now in Uzbekistan. The name Registan means "sandy place" or "desert" in Persian. The Registan was a public square, where people gathered to hear royal proclamations, heralded by blasts on enormous copper pipes called dzharchis - and a place of public executions. It is framed by three madrasahs of distinctive Islamic architecture. The square was regarded as the hub of the Timurid Renaissance.
    </string>
    <string name="AmirTemur">
        The Gur-i Amir or Guri Amir is a mausoleum of the Turco-Mongol conqueror Timur in Samarkand, Uzbekistan. It occupies an important place in the history of Central Asian Architecture as the precursor for and had influence on later Great Mughal architecture tombs, including Gardens of Babur in Kabul, Humayun/s Tomb in Delhi and the Taj Mahal in Agra, built by Timur`s Indian descendants, Turco-Mongols that followed Indian culture with Central Asian influences, Mughals established the ruling Mughal dynasty of the Indian subcontinent. The mausoleum has been heavily restored
    </string>
    <string name="shahizinda">
        The Shah-i-Zinda Ensemble includes mausoleums and other ritual buildings of 11-15th and 19th centuries. The name Shah-i-Zinda (meaning "The living king") is connected with the legend that Qutham ibn Abbas, a cousin of the Prophet Muhammad, is buried here. He came to Samarkand with the Arab invasion in the 7th century to preach Islam. Popular legends speak that he was beheaded for his faith, but he did not die, took his head and went into the deep well (Garden of Paradise), where he\'s still living now.

The Shah-i-Zinda complex was formed over eight (from 11th till 19th) centuries and now includes more than twenty buildings.
    </string>
    <string name="bibi">
        The Bibi-Khanym Mosque is one of the most important monuments of Samarkand, Uzbekistan. In the 15th century, it was one of the largest and most magnificent mosques in the Islamic world. It is considered a masterpiece of the Timurid Renaissance. By the mid-20th century, only a grandiose ruin of it still survived, but major parts of the mosque were restored during the Soviet period
    </string>
</resources>