<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLightColor"
    android:orientation="vertical"
    tools:context=".mountains">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:src="@drawable/chimgan" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Chimgan Mountains"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="15sp"
                android:text="@string/chimgan" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:src="@drawable/sultan" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Khazret Sultan"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="15sp"
                android:text="@string/sultan" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:src="@drawable/adelung" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="mount adelung"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="15sp"
                android:text="@string/adelung" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:src="@drawable/urgan" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Ungar-Too"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="15sp"
                android:text="@string/urgan_too" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>