<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLightColor"
    android:orientation="vertical"
    tools:context=".Boysun_bahori_festival">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:src="@drawable/boysun" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Boysun Bahori Festival"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/baysun"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:src="@drawable/navruz" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Navruz"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Navroz"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:src="@drawable/galaba" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="the Day of Memory and Honor"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/may9"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:src="@drawable/march" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="International Women's Day in Uzbekistan"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/march8"
                android:textSize="15sp" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>