<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLightColor"
    android:orientation="vertical"
    tools:context=".historical_places">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:src="@drawable/registan" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Registan"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/registan"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:src="@drawable/amirtemur" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Amir Temur Mausoleum Gur-i Amir Сomplex"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/AmirTemur"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:src="@drawable/shahizinda" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Shah-i-Zinda Ensemble Шоҳи Зинда"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/shahizinda"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:src="@drawable/bibi" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Bibi-Khanym Mosque"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/bibi"
                android:textSize="15sp" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>